<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainPage"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true">
<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#4f0c6f">

        <ImageView 
            android:id="@+id/logo"
            android:src="@drawable/ss_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:layout_marginTop="10dp"
			/>
        <Button 
            android:id="@+id/aboutUsButton"
            android:text="@string/aboutUs"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textColor="#3a99d3"
            android:background="#4d2a7e"
            android:textStyle="bold"
            android:onClick="backButtonHandler"
            android:layout_marginTop="10dp"
            />
        <Button 
            android:id="@+id/eventsButton"
            android:text="@string/eventButton"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textColor="#3a99d3"
            android:background="#4d2a7e"
            android:textStyle="bold"
            android:onClick="backButtonHandler"
            android:layout_marginTop="10dp"
            />
        
        <Button 
            android:id="@+id/newsButton"
            android:text="@string/viewNews"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textColor="#3a99d3"
            android:background="#4d2a7e"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:onClick="backButtonHandler"
            />
        
       <Button 
            android:id="@+id/galleryButton"
            android:text="@string/galleryButton"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textColor="#3a99d3"
            android:background="#4d2a7e"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:onClick="backButtonHandler"
            />
       <Button 
            android:id="@+id/contatUs"
            android:text="@string/contactUs"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textColor="#3a99d3"
            android:background="#4d2a7e"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:onClick="backButtonHandler"
            />
</LinearLayout>
</ScrollView>